--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ alt=""> EC A Batch 2018-2022 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nb
                         <div class="col-12">
                             <div class="hero-slides-content">
                                 <h4 data-animation="fadeInUp" data-delay="100ms"</h4>
-                                <h2 data-animation="fadeInUp" data-delay="400ms"><br>ECE BATCH 2018-2022</h2>
+                                <h2 data-animation="fadeInUp" data-delay="400ms"><br>ECE BATCH 2018-2022<br>Guest</br></h2>
                                 
                             </div>
                         </div>
