--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                         <div class="header-content h-100 d-flex align-items-center justify-content-between">
                             <div class="academy-logo">
                                 <a href="index.html"><img src="img/core-img/logo.png" height="80" width="80"
-alt=""> EC A Batch 2018-2022 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; CURRENTLY : T2 A</a>
-                            </div>
+alt=""> EC A Batch 2018-2022  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; CURRENTLY : T2 A</a>
+                                <br>Guest login</br>         </div>
                             <div class="login-content">
                                
                             </div>
@@ -121,7 +121,7 @@ alt=""> EC A Batch 2018-2022 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nb
                         <div class="col-12">
                             <div class="hero-slides-content">
                                 <h4 data-animation="fadeInUp" data-delay="100ms"</h4>
-                                <h2 data-animation="fadeInUp" data-delay="400ms"><br>ECE BATCH 2018-2022<br>Guest</br></h2>
+                                <h2 data-animation="fadeInUp" data-delay="400ms"><br>ECE BATCH 2018-2022</h2>
                                 
                             </div>
                         </div>
