--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                     <div class="col-12 h-100">
                         <div class="header-content h-100 d-flex align-items-center justify-content-between">
                             <div class="academy-logo">
-                                <a href="index.html"><img src="img/core-img/logo.png" height="80" width="80"
+                                <a href="index.html"><img src="img/core-img/logo.png" height="80" width="80Guest login
 alt=""> EC A Batch 2018-2022  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; CURRENTLY : T2 A</a>
-                                <br>Guest login</br>         </div>
+                                  </div>
                             <div class="login-content">
                                
                             </div>
